fix: CI test glob and add live demo link to README

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - run: npm ci
 
       - name: Run unit tests
-        run: node --test 'test/**/*.test.js'
+        run: node --test test/
 
   lint:
     name: Lint
